# mb2-template

./: Cargo.toml  README.md  SETUP.md
.cargo/: config.toml
src/: main.rs
